make REPOSITORY_REVISION a simple string

--- a/doc/libsolv-bindings.3
+++ b/doc/libsolv-bindings.3
@@ -370,7 +370,7 @@ The keyname Id of the name of the solvable\&.
 .PP
 \fB\&...\fR
 .RS 4
-see the libsolv\-knownid manpage for a list of fixed Ids\&.
+see the libsolv\-constantids manpage for a list of fixed Ids\&.
 .RE
 .SH "THE POOL CLASS"
 .sp
