--- a/doc/libsolv-constantids.3
+++ b/doc/libsolv-constantids.3
@@ -744,17 +744,17 @@ The cpeid of the platform updated by this repository\&. Is both used in REPOSITO
 .PP
 \fBREPOSITORY_REPOID "repository:repoid"\fR
 .RS 4
-An array of Id strings describing this repository\&.
+An array of Id strings describing keywords/tags about the repository itself\&.
 .RE
 .PP
 \fBREPOSITORY_KEYWORDS "repository:keywords"\fR
 .RS 4
-An array of Id strings describing keywords of this repository\&.
+An array of Id strings describing keywords/tags about the content of the repository\&.
 .RE
 .PP
 \fBREPOSITORY_REVISION "repository:revision"\fR
 .RS 4
-One or more(?) arbitrary revision strings describing the revision of the repository\&.
+An arbitrary string describing the revision of the repository\&.
 .RE
 .PP
 \fBREPOSITORY_TOOLVERSION "repository:toolversion"\fR
