--- a/doc/libsolv.3
+++ b/doc/libsolv.3
@@ -2,12 +2,12 @@
 .\"     Title: libsolv
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 06/07/2013
+.\"      Date: 06/10/2013
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "LIBSOLV" "3" "06/07/2013" "libsolv" "LIBSOLV"
+.TH "LIBSOLV" "3" "06/10/2013" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -35,7 +35,7 @@ The libsolv documentation is split into multiple parts:
 .PP
 \fBlibsolv\-history\fR
 .RS 4
-how the libsolv library came into existance
+how the libsolv library came into existence
 .RE
 .PP
 \fBlibsolv\-constantids\fR
