--- a/doc/libsolv-bindings.3
+++ b/doc/libsolv-bindings.3
@@ -85,7 +85,7 @@ my \fI$iter\fR \fB=\fR \fI$pool\fR\fB\->solvables_iter()\fR;
 .RE
 .\}
 .sp
-As a downside of this approach, iterator objects can have no attributes\&.
+As a downside of this approach, iterator objects cannot have attributes\&.
 .sp
 If an array needs to be passed to a method it is usually done by reference, if a method returns an array it returns it on the stack:
 .sp
