the manpage generator automatically capitalizes...

--- a/doc/libsolv-bindings.3
+++ b/doc/libsolv-bindings.3
@@ -1,13 +1,13 @@
 '\" t
-.\"     Title: libsolv-bindings
+.\"     Title: Libsolv-Bindings
 .\"    Author: [see the "Author" section]
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 06/10/2013
+.\"      Date: 06/11/2013
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "LIBSOLV\-BINDINGS" "3" "06/10/2013" "libsolv" "LIBSOLV"
+.TH "LIBSOLV\-BINDINGS" "3" "06/11/2013" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -2972,7 +2972,7 @@ Allow to break the dependencies of the matching packages\&. Handle with care\&.
 .PP
 \fBSOLVER_MULTIVERSION\fR
 .RS 4
-Mark the matched packages for multiversion install\&. If they get to be installed because of some other job, the installation will keep the old version of the package installed (for rpm by using \(oq`\-i\*(Aq\*(Aq instead of ``\-U\(cq\*(Aq)\&.
+Mark the matched packages for multiversion install\&. If they get to be installed because of some other job, the installation will keep the old version of the package installed (for rpm by using \(lq\-i\(rq instead of \(lq\-U\(rq)\&.
 .RE
 .PP
 \fBSOLVER_LOCK\fR
