--- a/doc/libsolv-constantids.3
+++ b/doc/libsolv-constantids.3
@@ -1,13 +1,13 @@
 '\" t
-.\"     Title: libsolv-constantids
+.\"     Title: Libsolv-Constantids
 .\"    Author: [see the "Author" section]
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 06/10/2013
+.\"      Date: 06/11/2013
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "LIBSOLV\-CONSTANTIDS" "3" "06/10/2013" "libsolv" "LIBSOLV"
+.TH "LIBSOLV\-CONSTANTIDS" "3" "06/11/2013" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -149,7 +149,7 @@ list of keyword string IDs used for tagging this package\&.
 .PP
 \fBSOLVABLE_LICENSE "solvable:license"\fR
 .RS 4
-The license of this package\&.
+The license(s) of this package\&.
 .RE
 .PP
 \fBSOLVABLE_BUILDTIME "solvable:buildtime"\fR
@@ -291,7 +291,7 @@ The seconds since the unix epoch when the changelog entry was written\&.
 .RS 4
 The text of a changelog entry\&.
 .RE
-.SH "SPECIAL SOLVABLEATTRIBUTES"
+.SH "SPECIAL SOLVABLE ATTRIBUTES"
 .PP
 \fBRPM_RPMDBID "rpm:dbid"\fR
 .RS 4
