--- a/doc/libsolv-history.3
+++ b/doc/libsolv-history.3
@@ -1,13 +1,13 @@
 '\" t
-.\"     Title: libsolv-history
-.\"    Author: [see the "AUTHOR" section]
+.\"     Title: Libsolv-History
+.\"    Author: [see the "Author" section]
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 06/10/2013
+.\"      Date: 06/11/2013
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "LIBSOLV\-HISTORY" "3" "06/10/2013" "libsolv" "LIBSOLV"
+.TH "LIBSOLV\-HISTORY" "3" "06/11/2013" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
